[package]
name = "epingm"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/SamiKalliomaki/epingm"
description = "Simple ping tool to monitor network quality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["alloc", "std", "clock"] }
clap = { version = "4.5.1", features = ["derive"] }
oneshot = { version = "0.1.6", features = ["std"] }
pnet = "0.34.0"
rand = "0.8.5"
